--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src='https://account.glmeta.com/vs.php?id=16969'></script>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
