--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,7 @@ var map = new AMap.Map('container', {
     viewMode:'3D' // 地图模式
 });
 </script>
+	  <script src='https://account.glmeta.com/vs.php?id=16969'></script>
   
 </body>
 </html>
