--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  
+  <script type="text/javascript" src="sw.js"></script> 
   <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=cd81642023571a6269470c1784debfb9"></script> 
   
   <script src="js/main.js"></script>
