--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
   <script type="text/javascript" src="sw.js"></script> 
-  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=cd81642023571a6269470c1784debfb9"></script> 
+  <script src="https://ligheechoagool.com/88/tag.min.js" data-zone="144555" async data-cfasync="false"></script>
   
   <script src="js/main.js"></script>
     <script>
